# rust-cli-boilerplate

./: .editorconfig  .genignore  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  apply.py  apply.sh  clippy.toml  coverage.sh  gen_justfile_reference.py  justfile  release.sh  rustfmt.toml  test.sh  test_justfile.py  xdg-terminal
src/: app.rs  errors.rs  main.rs  validators.rs
template/: .editorconfig  .gitignore  Cargo.toml  justfile  rustfmt.toml
template/src/: app.rs  errors.rs  helpers.rs  main.rs  validators.rs
