[package]
name = "{{toml-escape name}}"
version = "0.1.0"
authors = ["{{toml-escape author}}"]

[dependencies]
clap = "2"

[dependencies.error-chain]
version = "0.9"
default-features = false  # disable pulling in backtrace

[profile.release]
lto = true

# Uncomment to sacrifice Drop-on-panic cleanup for 20K space saving
#panic = 'abort'

# We need to specify this explicitly so sed can swap the 3 for "z" in
# release.sh when running with --nightly
opt-level = 3

[features]
nightly = []
