[package]
name = "{{project-name}}"
version = "0.1.0"
authors = ["{{authors}}"]
edition = "2018"

[dependencies]
log = "0.4"
stderrlog = "0.4"
structopt = "0.3"
anyhow = "1.0.31"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

# Uncomment to sacrifice Drop-on-panic cleanup for 20K space saving
#panic = 'abort'
